// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Renderer:service 1`] = `
<div>
  <div
    class="a-Panel a-Panel--default a-Panel--form"
    style="position: relative;"
  >
    <div
      class="a-Panel-heading"
    >
      <h3
        class="a-Panel-title"
      >
        <span
          class="a-TplField"
        >
          <span>
            The form
          </span>
        </span>
      </h3>
    </div>
    <div
      class="a-Panel-body"
    >
      <form
        class="a-Form a-Form--normal"
        novalidate=""
      >
        <div
          class="a-Form-item a-Form-item--normal is-required"
          data-role="form-item"
        >
          <label
            class="a-Form-label"
          >
            <span>
              <span
                class="a-TplField"
              >
                <span>
                  模板
                </span>
              </span>
              <span
                class="a-Form-star"
              >
                *
              </span>
            </span>
          </label>
          <div
            class="a-SelectControl a-Form-control is-inline"
          >
            <div
              aria-expanded="false"
              aria-haspopup="listbox"
              aria-labelledby="downshift-0-label"
              class="a-Select"
              role="combobox"
              tabindex="0"
            >
              <div
                class="a-Select-valueWrap"
              >
                <div
                  class="a-Select-value"
                >
                  模板1
                </div>
              </div>
              <span
                class="a-Select-arrow"
              >
                <icon-mock
                  classname="icon icon-caret"
                  icon="caret"
                />
              </span>
            </div>
          </div>
        </div>
        <div
          class="a-Service m-t"
        >
          <div
            class="a-Service-body"
          >
            <div
              class="a-Form-item a-Form-item--normal is-required"
              data-role="form-item"
            >
              <label
                class="a-Form-label"
              >
                <span>
                  <span
                    class="a-TplField"
                  >
                    <span>
                      动态字段1
                    </span>
                  </span>
                  <span
                    class="a-Form-star"
                  >
                    *
                  </span>
                </span>
              </label>
              <div
                class="a-Form-control a-TextControl"
              >
                <div
                  class="a-TextControl-input"
                >
                  <input
                    autocomplete="off"
                    name="dy_1"
                    placeholder=""
                    size="10"
                    type="text"
                    value=""
                  />
                </div>
              </div>
            </div>
            <div
              class="a-Form-item a-Form-item--normal"
              data-role="form-item"
            >
              <label
                class="a-Form-label"
              >
                <span>
                  <span
                    class="a-TplField"
                  >
                    <span>
                      动态字段2
                    </span>
                  </span>
                </span>
              </label>
              <div
                class="a-Form-control a-TextControl"
              >
                <div
                  class="a-TextControl-input"
                >
                  <input
                    autocomplete="off"
                    name="dy_2"
                    placeholder=""
                    size="10"
                    type="text"
                    value=""
                  />
                </div>
              </div>
            </div>
          </div>
          <div
            class="a-Spinner-overlay"
          />
          <div
            class="a-Spinner a-Spinner--overlay a-Spinner--lg"
          />
        </div>
        <input
          style="display: none;"
          type="submit"
        />
      </form>
    </div>
    <div
      class="resize-sensor"
      style="position: absolute; left: 0px; top: 0px; right: 0px; bottom: 0px; overflow: scroll; z-index: -1; visibility: hidden;"
    >
      
  
      <div
        class="resize-sensor-expand"
        style="position: absolute; left: 0; top: 0; right: 0; bottom: 0; overflow: scroll; z-index: -1; visibility: hidden;"
      >
        
    
        <div
          style="position: absolute; left: 0px; top: 0px; width: 10px; height: 10px;"
        />
        
  
      </div>
      
  
      <div
        class="resize-sensor-shrink"
        style="position: absolute; left: 0; top: 0; right: 0; bottom: 0; overflow: scroll; z-index: -1; visibility: hidden;"
      >
        
    
        <div
          style="position: absolute; left: 0; top: 0; width: 200%; height: 200%"
        />
        
  
      </div>
      
  
      <div
        class="resize-sensor-appear"
        style="position: absolute; left: 0; top: 0; right: 0; bottom: 0; overflow: scroll; z-index: -1; visibility: hidden;animation-name: apearSensor; animation-duration: 0.2s;"
      />
    </div>
  </div>
</div>
`;

exports[`form:service:remoteData 1`] = `
<div>
  <form
    class="a-Form a-Form--normal"
    novalidate=""
  >
    <div
      class="a-Service"
    >
      <div
        class="a-Service-body"
      >
        <div
          class="a-Form-item a-Form-item--normal"
          data-role="form-item"
        >
          <div
            class="a-Form-control a-TextControl"
          >
            <div
              class="a-TextControl-input"
            >
              <input
                autocomplete="off"
                name="child-a"
                placeholder=""
                size="10"
                type="text"
                value="123"
              />
            </div>
          </div>
        </div>
      </div>
      <div
        class="a-Spinner-overlay"
      />
      <div
        class="a-Spinner a-Spinner--overlay a-Spinner--lg"
      />
    </div>
    <div
      class="a-Form-item a-Form-item--normal"
      data-role="form-item"
    >
      <button
        class="a-Button a-Button--default"
        type="submit"
      >
        <span>
          Submit
        </span>
      </button>
    </div>
    <input
      style="display: none;"
      type="submit"
    />
  </form>
</div>
`;

exports[`form:service:remoteSchmea+data 1`] = `
<div>
  <form
    class="a-Form a-Form--normal"
    novalidate=""
  >
    <div
      class="a-Service"
    >
      <div
        class="a-Service-body"
      >
        <div
          class="a-Form-item a-Form-item--normal"
          data-role="form-item"
        >
          <div
            class="a-Form-control a-TextControl"
          >
            <div
              class="a-TextControl-input"
            >
              <input
                autocomplete="off"
                name="child-a"
                placeholder=""
                size="10"
                type="text"
                value="123"
              />
            </div>
          </div>
        </div>
        <div
          class="a-Form-item a-Form-item--normal"
          data-role="form-item"
        >
          <div
            class="a-Form-control a-TextControl"
          >
            <div
              class="a-TextControl-input"
            >
              <input
                autocomplete="off"
                name="child-b"
                placeholder=""
                size="10"
                type="text"
                value="344"
              />
            </div>
          </div>
        </div>
      </div>
      <div
        class="a-Spinner-overlay"
      />
      <div
        class="a-Spinner a-Spinner--overlay a-Spinner--lg"
      />
    </div>
    <div
      class="a-Form-item a-Form-item--normal"
      data-role="form-item"
    >
      <button
        class="a-Button a-Button--default"
        type="submit"
      >
        <span>
          Submit
        </span>
      </button>
    </div>
    <input
      style="display: none;"
      type="submit"
    />
  </form>
</div>
`;

exports[`form:service:super-remoteData 1`] = `
<div>
  <form
    class="a-Form a-Form--normal"
    novalidate=""
  >
    <div
      class="a-Spinner-overlay"
    />
    <div
      class="a-Spinner a-Spinner--overlay"
    />
    <div
      class="a-Service"
    >
      <div
        class="a-Service-body"
      >
        <div
          class="a-Form-item a-Form-item--normal"
          data-role="form-item"
        >
          <div
            class="a-Form-control a-TextControl"
          >
            <div
              class="a-TextControl-input"
            >
              <input
                autocomplete="off"
                name="child-a"
                placeholder=""
                size="10"
                type="text"
                value="123"
              />
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class="a-Form-item a-Form-item--normal"
      data-role="form-item"
    >
      <button
        class="a-Button a-Button--default"
        type="submit"
      >
        <span>
          Submit
        </span>
      </button>
    </div>
    <input
      style="display: none;"
      type="submit"
    />
  </form>
</div>
`;
